# proiect_spg

./: CMakeLists.txt  README.md
ClothSimulator/: Cloth.cpp  Particle.cpp  Particle.h
SimulatorApp/: main.cpp
SimulatorApp/ClothSimulator/: Cloth.cpp  Cloth.h  Particle.cpp  Particle.h  Spring.cpp  Spring.h
SimulatorApp/Primitives/: Sphere.cpp  Sphere.h
SimulatorApp/Renderer/: Shader.cpp  Shader.h
SimulatorApp/Shaders/: basic.frag
